--- a/ElinActionHookMod.csproj
+++ b/ElinActionHookMod.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove=".history\**"/>
+    <None Remove=".history\**" />
 
     <Reference Include="Plugins.UI">
       <HintPath>$(ElinGamePath)\Elin_Data\Managed\Plugins.UI.dll</HintPath>
@@ -81,5 +81,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     -->
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="19.0.0" />
   </ItemGroup>
 </Project>
